objects/Voter__c.object
<CustomObject>
    <fields>
        <fullName>Contacted_2016__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted (2016)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Political_Party__c</fullName>
        <label>Political Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Democrat</fullName>
                </value>
                <value>
                    <fullName>Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precinct__c</fullName>
        <label>Precinct</label>
        <referenceTo>Precinct__c</referenceTo>
        <relationshipLabel>Voters</relationshipLabel>
        <relationshipName>Voters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Voter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Voter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>